--- a/app.json
+++ b/app.json
@@ -19,6 +19,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "NEXT_PUBLIC_MAPS_API_KEY=AIzaSyD2OOcCZIQ_ywmsa1CXSTmEgitI-9h5xbw"
+        }
       }
     },
     "web": {
