--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
@@ -37,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
