--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
