--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "^4.5.2",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "^2.10.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.8",
@@ -46,6 +46,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-maps": "1.14.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
