--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-crop-picker": "^0.41.2",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "^1.20.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
